--- a/estilos.css
+++ b/estilos.css
@@ -90,4 +90,16 @@ body {
     font-size: 1.4rem;
   }
 
+  .detalle-cargo {
+    margin: 0 0 0.3rem 0;
+    font-size: 1rem;
+  }
+  
+  .detalle-cargo .fecha {
+    color: #888;
+    font-size: 0.9rem;
+  }
+
+  
+
   
