--- a/estilos.css
+++ b/estilos.css
@@ -99,7 +99,29 @@ body {
     color: #888;
     font-size: 0.9rem;
   }
+ 
+  .imagen-pequena {
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
 
+  figure {
+    text-align: center;
+    margin: 1rem auto;
+  }
   
-
+  figure img {
+    display: block;
+    margin: 0 auto;
+  }
   
+  figure figcaption {
+    font-size: 0.85rem;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.4;
+  }
